# kafq

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/json/: Cargo.toml
examples/json/src/: lib.rs
examples/passthrough/: Cargo.toml
examples/passthrough/src/: lib.rs
src/: client.rs  commands.rs  formatter.rs  main.rs  output.rs  timestamp.rs  wasm_formatter.rs
src/commands/: config.rs  consume.rs  contract.rs  copy_topic.rs  create_topic.rs  delete_topic.rs  dump_topic.rs  list.rs  metadata.rs  produce.rs  topic_offsets.rs
tests/: e2e.rs  e2e_wasm.rs
wit/: formatter.wit
