[package]
name = "json-formatter"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wit-bindgen = "0.46"
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
